# cdc

./: Cargo.toml  README.md  docker-compose.yml  init_db.sh
.github/workflows/: rust.yml
examples/application/: Cargo.toml
examples/application/src/: handler.rs  main.rs  model.rs
migrations/: 20240802181821_init.sql
src/: db.rs  lib.rs  main.rs  model.rs
src/amqp/: Cargo.toml
src/amqp/src/: lib.rs  model.rs  publisher.rs
src/amqp/tests/: publish.rs
src/application/: Cargo.toml
src/application/src/: lib.rs  main.rs  model.rs
src/application/src/events_publisher/: mod.rs  model.rs
src/cdc-framework/: Cargo.toml
src/cdc-framework/src/: lib.rs  publisher.rs
src/cdc-framework/src/db/: config.rs  mod.rs  model.rs  setup.rs
src/cdc-framework/src/publisher/: mod.rs
src/cdc-framework/src/subscriber/: handler.rs  mod.rs
src/cdc-framework/tests/: setup.rs
src/outbox/: Cargo.toml
src/outbox/src/: amqp.rs  client.rs  lib.rs  model.rs  retry.rs  subscriber.rs
src/outbox/src/handlers/: amqp.rs  eager_retry.rs  mod.rs
src/outbox/tests/: outbox.rs
src/outbox/tests/common/: mock_handlers.rs  mod.rs  test_event.rs
src/publisher/: mod.rs
src/subscriber/: handler.rs  message.rs  mod.rs  stream.rs
