[workspace]
resolver = "2"
members = ["src/cdc-framework", "src/application", "src/outbox"]

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", features = [
    "with-uuid-1",
] }
bytes = "1.7.1"
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
