[workspace]
resolver = "2"
members = [
    "examples/application",
    "src/cdc-framework",
    "src/outbox",
    "src/amqp",
]

[workspace.dependencies]
lapin = { version = "2.5.0" }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "37f1114" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", features = [
    "with-uuid-1",
], rev = "37f1114" }
bytes = "1.7.1"
futures = "0.3.30"
hex = "0.4.3"
rand = "0.8"
reqwest = "0.11.6"
serde = "1"
serde_json = "1"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
