[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
amqp = { workspace = true }
outbox = { workspace = true }

tokio = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
futures = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
