[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
cdc-framework = { path = "../cdc-framework" }

tokio = { workspace = true }
postgres-protocol = { workspace = true }
tokio-postgres = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
prost = "0.13"
prost-types = "0.13"
