[package]
name = "outbox"
version = "0.1.0"
edition = "2021"

[dependencies]
amqp = { path = "../amqp" }
cdc-framework = { path = "../cdc-framework" }

hex = { workspace = true }
postgres-replication = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
lapin = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["serde"] }
